src/objects/Historical_Complaint_Action__c.object
<CustomObject>
    <description>Junction object for Complaint and Action Object</description>
    <fields>
        <fullName>Complaint_Action_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Complaint Action Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint2__c</referenceTo>
        <relationshipLabel>Historical Complaint Action</relationshipLabel>
        <relationshipName>Historical_Complaint_Action</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction__c</fullName>
        <label>Sanction</label>
        <referenceTo>Action__c</referenceTo>
        <relationshipLabel>Historical Complaint Action</relationshipLabel>
        <relationshipName>Action</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Historical Complaint Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Historical Complaint Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historical Complaint Action</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>